<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DotConcert</string>
    <string name="title_activity_maps">Map</string>
    <string name="nazivKoncerta">Naziv koncerta</string>
    <string name="Izvođač">Izvođac</string>
    <string name="webIzvođač">Web izvođac</string>
    <string name="vrijemeOdrzavanja">Vrijeme održavanja</string>
    <string name="dodatneInformacije">Dodatne informacije</string>
    <string name="brojKarata">Broj karata</string>
    <string name="prikaziNaMaps">Prikaži koncert na mapi</string>
    <string name="obrisiKoncert">Obrisi koncert</string>

</resources>
