<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nazivKoncerta" />

            <TextView
                android:id="@+id/tvNaziv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bright_foreground_material_light"
                android:textSize="25dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#FF0000FF" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Izvođač" />

            <TextView
                android:id="@+id/tvIzvodac"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bright_foreground_material_light"
                android:textSize="25dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#FF0000FF" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/webIzvođač" />

            <TextView
                android:id="@+id/tvWebIzvodjac"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bright_foreground_material_light"
                android:textSize="25dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#FF0000FF" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/vrijemeOdrzavanja" />

            <TextView
                android:id="@+id/tvVrijemeOdrzavanja"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bright_foreground_material_light"
                android:textSize="25dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#FF0000FF" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dodatneInformacije" />

            <TextView
                android:id="@+id/tvDodatneInformacije"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bright_foreground_material_light"
                android:textSize="25dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#FF0000FF" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/brojKarata" />

            <TextView
                android:id="@+id/tvBrojKarata"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bright_foreground_material_light"
                android:textSize="25dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#FF0000FF" />

            <Button
                android:id="@+id/bPrikaziNaMapi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/prikaziNaMaps" />
            <Button
                android:id="@+id/bAzuriraj"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Ažuriraj" />

            <Button
                android:id="@+id/bObrisi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/obrisiKoncert" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>